content elements done

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,3 +3,6 @@
 @import './_elements/_header1.css';
 @import './_elements/_header2.css';
 @import './_elements/_header3.css';
+@import './_elements/_content1.css';
+@import './_elements/_content2.css';
+@import './_elements/_content3.css';
