--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,3 +6,5 @@
 @import './_elements/_content1.css';
 @import './_elements/_content2.css';
 @import './_elements/_content3.css';
+@import './_elements/_footer1.css';
+@import './_elements/_footer2.css';
