--- a/src/css/_elements/_header3.css
+++ b/src/css/_elements/_header3.css
@@ -7,6 +7,7 @@
   flex-direction: column;
   padding: 0;
   margin: 5% 1%;
+  color: var(--fontDark);
 }
 
 .header3 .container {
@@ -30,7 +31,7 @@
 }
 
 .header3 p {
-  font-weight: normal;
+  font-weight: 400;
   font-size: 60px;
   margin: 30px 0;
 }
