--- a/src/css/_elements/_header3.css
+++ b/src/css/_elements/_header3.css
@@ -67,6 +67,10 @@
   color: white;
 }
 
+.header3 .button:hover {
+  transform: scale(1.1);
+}
+
 .header3 .button-empty {
   color: var(--baseBlue);
   border: 1.5px solid var(--baseBlue);
