--- a/src/css/_elements/_footer1.css
+++ b/src/css/_elements/_footer1.css
@@ -61,6 +61,11 @@
   padding-left: 0;
 }
 
+.footer1 a:hover {
+  color: var(--baseBlue);
+  font-weight: 400;
+}
+
 .footer1 img {
   width: 20%;
   margin-top: 30px;
@@ -89,34 +94,6 @@
   bottom: 5px;
 }
 
-.footer1 .button-container {
-  display: flex;
-}
-
-.footer1 .button {
-  border: none;
-  outline: none;
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 5px;
-  font-weight: bold;
-  transition: all 0.3s ease;
-  cursor: pointer;
-  min-width: 300px;
-  font-size: 40px;
-  padding: 34px 45px;
-  background: var(--baseBlue);
-  color: white;
-}
-
-.footer1 .button-empty {
-  color: var(--baseBlue);
-  border: 1.5px solid var(--baseBlue);
-  background: transparent;
-  margin-left: 15px;
-}
-
 @media (min-device-width: 480px) {
   .footer1 .container {
     margin: 0 5%;
@@ -134,9 +111,6 @@
     width: 70%;
     margin-top: 0px;
   }
-  .footer1 h1 {
-    font-size: 45px;
-  }
   .footer1 p {
     font-size: 20px;
   }
@@ -153,25 +127,12 @@
   .footer1 .sign {
     font-size: 12px;
   }
-  .footer1 .button{
-    min-width: 150px;
-    font-size: 17px;
-    padding: 14px 15px;
-    margin-right: 15px;
-  }
-  .footer1 .button-empty {
-    margin-left: 0px;
-    margin-right: 0px;
-  }
 }
 @media (min-device-width: 1120px) {
   .footer1 .container {
     margin: 0 10%;
     padding-bottom: 3%;
     flex-wrap: nowrap;
-  }
-  .footer1 h1 {
-    font-size: 60px;
   }
   .footer1 h4 {
     font-size: 30px;
