--- a/src/css/_elements/_footer2.css
+++ b/src/css/_elements/_footer2.css
@@ -26,12 +26,6 @@
   margin-bottom: 30px;
 }
 
-.footer2 h1 {
-  font-size: 100px;
-  font-weight: 900;
-  margin: 0;
-}
-
 .footer2 span {
   color: var(--baseBlue);
 }
@@ -59,6 +53,11 @@
   color: white;
   padding: 3px;
   padding-left: 0;
+}
+
+.footer2 a:hover {
+  color: var(--baseBlue);
+  font-weight: 400;
 }
 
 .footer2 img {
@@ -89,34 +88,6 @@
   bottom: 5px;
 }
 
-.footer2 .button-container {
-  display: flex;
-}
-
-.footer2 .button {
-  border: none;
-  outline: none;
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 5px;
-  font-weight: bold;
-  transition: all 0.3s ease;
-  cursor: pointer;
-  min-width: 300px;
-  font-size: 40px;
-  padding: 34px 45px;
-  background: var(--baseBlue);
-  color: white;
-}
-
-.footer2 .button-empty {
-  color: var(--baseBlue);
-  border: 1.5px solid var(--baseBlue);
-  background: transparent;
-  margin-left: 15px;
-}
-
 @media (min-device-width: 480px) {
   .footer2 .container {
     margin: 0 5%;
@@ -136,9 +107,6 @@
     width: 70%;
     margin-top: 0px;
   }
-  .footer2 h1 {
-    font-size: 45px;
-  }
   .footer2 p {
     font-size: 20px;
   }
@@ -155,25 +123,12 @@
   .footer2 .sign {
     font-size: 12px;
   }
-  .footer2 .button{
-    min-width: 150px;
-    font-size: 17px;
-    padding: 14px 15px;
-    margin-right: 15px;
-  }
-  .footer2 .button-empty {
-    margin-left: 0px;
-    margin-right: 0px;
-  }
 }
 @media (min-device-width: 1120px) {
   .footer2 .container {
     margin: 0 10%;
     padding-bottom: 3%;
     flex-wrap: nowrap;
-  }
-  .footer2 h1 {
-    font-size: 60px;
   }
   .footer2 h4 {
     font-size: 30px;
