--- a/packages/client/src/components/Forms/Form.css
+++ b/packages/client/src/components/Forms/Form.css
@@ -1,15 +1,15 @@
-.elementsContainer {
-  background-color: #fff;
+.Form {
+  width: 450px;
+  height: 340px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-  height: 15em;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-around;
   padding: 20px;
-  padding-top: 10px;
-  margin-top: 15px;
-  margin-left: 29.5px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   border-radius: 12px;
   position: fixed;
   z-index: 99;
