--- a/packages/client/src/css/_elements/_content3.css
+++ b/packages/client/src/css/_elements/_content3.css
@@ -20,7 +20,7 @@
 }
 
 .content3 h3 {
-  font-size: 65px;
+  font-size: 30px;
   font-weight: 500;
   margin: 0;
 }
@@ -44,25 +44,22 @@
   text-align: center;
   border-radius: 15px;
   transition: all 0.3s ease;
-  padding: 50px 50px;
+  padding: 20px 20px;
   color: var(--fontDark);
   background-color: white;
   box-shadow: rgb(0 0 0 / 30%) 0px 10px 15px -3px, rgb(0 0 0 / 5%) 0px 4px 6px -2px;
-  margin: 2%;
-  font-size: 60px;
+  margin: 1%;
+  font-size: 20px;
 }
 
 @media (min-device-width: 480px) {
   .content3 {
-    margin: 0 5%;
+    margin: 1% 5%;
   }
   .content3 .container {
     width: 40%;
     justify-content: center;
     align-items: flex-start;
-  }
-  .content3 h3 {
-    font-size: 30px;
   }
   .content3 li {
     min-width: 110px;
@@ -81,7 +78,7 @@
 @media (min-device-width: 1120px) {
   .content3 {
     flex-direction: row;
-    margin: 0 10%;
+    margin: 1% 10%;
   }
   .content3 ul {
 
