--- a/packages/client/src/components/Field/Field.css
+++ b/packages/client/src/components/Field/Field.css
@@ -1,13 +1,13 @@
 .Field {
-  width: 75%;
+  width: 100%;
   min-height: 90vh;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   margin-top: 15px;
   margin-bottom: 15px;
   border-radius: 12px;
   position: relative;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 240px;
+  margin-right: 30px;
 }
 
 #chakra-modal-Field {
