--- a/packages/client/src/css/_elements/_footer1.css
+++ b/packages/client/src/css/_elements/_footer1.css
@@ -1,7 +1,7 @@
 .footer1 {
   background-color: var(--backLight);
   color: var(--fontDark);
-  margin-top: 15px;
+  padding-top: 15px;
 }
 
 .footer1 .container {
@@ -28,7 +28,7 @@
 }
 
 .footer1 h1 {
-  font-size: 100px;
+  font-size: 20px;
   font-weight: 900;
   margin: 0;
 }
@@ -38,7 +38,7 @@
 }
 
 .footer1 h4 {
-  font-size: 55px;
+  font-size: 20px;
   font-weight: 500;
   margin: 0;
 }
@@ -49,7 +49,7 @@
 
 .footer1 p {
   font-weight: normal;
-  font-size: 60px;
+  font-size: 18px;
   margin: 0;
   margin-top: 30px;
   margin-bottom: 15px;
@@ -78,14 +78,14 @@
 }
 
 .footer1 li {
-  font-size: 50px;
+  font-size: 20px;
   font-weight: 200;
   padding: 3px;
   padding-left: 0;
 }
 
 .footer1 .sign {
-  font-size: 25px;
+  font-size: 15px;
   position: absolute;
   margin-left: auto;
   margin-right: auto;
@@ -95,7 +95,7 @@
   bottom: 5px;
 }
 
-@media (min-device-width: 480px) {
+@media (min-device-width: 820px) {
   .footer1 .container {
     margin: 0 5%;
     padding: 0;
@@ -113,17 +113,16 @@
     margin-top: 0px;
   }
   .footer1 p {
-    font-size: 20px;
+    font-size: 25px;
   }
   .footer1 h4 {
-    font-size: 35px;
     text-align: left;
   }
   .footer1 ul {
     text-align: left;
   }
   .footer1 li {
-    font-size: 30px;
+    font-size: 25px;
   }
   .footer1 .sign {
     font-size: 12px;
@@ -134,12 +133,6 @@
     margin: 0 10%;
     padding-bottom: 3%;
     flex-wrap: nowrap;
-  }
-  .footer1 h4 {
-    font-size: 30px;
-  }
-  .footer1 li {
-    font-size: 25px;
   }
   .footer1 .sign {
     font-size: 15px;
