--- a/packages/client/src/css/_elements/_header3.css
+++ b/packages/client/src/css/_elements/_header3.css
@@ -6,7 +6,7 @@
   justify-content: center;
   flex-direction: column;
   padding: 0;
-  margin: 5% 1%;
+  margin: 5% 0;
   color: var(--fontDark);
 }
 
@@ -20,7 +20,7 @@
 }
 
 .header3 h1 {
-  font-size: 100px;
+  font-size: 45px;
   font-weight: 900;
   margin: 0;
   text-align: center;
@@ -32,8 +32,9 @@
 
 .header3 p {
   font-weight: 400;
-  font-size: 60px;
-  margin: 30px 0;
+  font-size: 20px;
+  margin: 30px 10px;
+  /* padding: 0 10px; */
 }
 
 .header3 a {
@@ -60,9 +61,9 @@
   font-weight: bold;
   transition: all 0.3s ease;
   cursor: pointer;
-  min-width: 300px;
-  font-size: 40px;
-  padding: 34px 45px;
+  min-width: 115px;
+  font-size: 17px;
+  padding: 14px 15px;
   background: var(--baseBlue);
   color: white;
 }
@@ -79,9 +80,6 @@
 }
 
 @media (min-device-width: 480px) {
-  .header3 {
-    margin: 5%;
-  }
   .header3 .container {
     width: 60%;
     text-align: center;
