--- a/packages/server/static/style.css
+++ b/packages/server/static/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 h1 {
-  font-size: 60px;
+  font-size: 45px;
 }
 
 h2 {
@@ -39,7 +39,7 @@ a {
   justify-content: center;
   flex-direction: column;
   padding: 0;
-  margin: 5% 1%;
+  margin: 5% 0;
   color: var(--fontDark);
 }
 
@@ -53,7 +53,6 @@ a {
 }
 
 .header1 h1 {
-  font-size: 100px;
   font-weight: 900;
   margin: 0;
 }
@@ -64,8 +63,9 @@ a {
 
 .header1 p {
   font-weight: normal;
-  font-size: 60px;
+  font-size: 30px;
   margin: 30px 0;
+  padding: 0 10px;
 }
 
 .header1 a {
@@ -91,9 +91,11 @@ a {
   font-weight: bold;
   transition: all 0.3s ease;
   cursor: pointer;
-  min-width: 300px;
-  font-size: 40px;
-  padding: 34px 45px;
+  min-width: 115px;
+  font-size: 17px;
+  padding: 14px 15px;
+  margin-right: 15px;
+  margin-left: 15px;
   background: var(--baseBlue);
   color: white;
 }
@@ -115,6 +117,7 @@ a {
     margin: 5%;
   }
   .header1 .container {
+    margin-right: 5%;
     width: 50%;
     text-align: left;
     justify-content: center;
@@ -124,17 +127,12 @@ a {
     width: 50%;
     margin-top: 0px;
   }
-  .header1 h1 {
-    font-size: 45px;
-  }
   .header1 p {
-    font-size: 30px;
+    padding: 0;
   }
-  .header1 .button{
-    min-width: 150px;
-    font-size: 17px;
-    padding: 14px 15px;
-    margin-right: 15px;
+  .header1 .button {
+    min-width: 115px;
+    margin-left: 0px;
   }
   .header1 .button-empty {
     margin-left: 0px;
@@ -145,12 +143,17 @@ a {
   .header1 {
     flex-direction: row;
     margin: 10%;
+    margin-top: 5%;
+    margin-bottom: 5%;
   }
   .header1 h1 {
     font-size: 60px;
   }
   .header1 p {
     font-size: 20px;
+  }
+  .header1 .button {
+    min-width: 150px;
   }
 }
 
@@ -162,7 +165,7 @@ a {
   justify-content: center;
   flex-direction: column;
   padding: 0;
-  margin: 5% 1%;
+  margin: 5% 0;
   color: var(--fontDark);
 }
 
@@ -176,14 +179,14 @@ a {
 }
 
 .header2 h1 {
-  font-size: 100px;
+  font-size: 50px;
   font-weight: 900;
   margin: 0;
   position: relative;
 }
 
 .header2 h3 {
-  font-size: 60px;
+  font-size: 40px;
   font-weight: 500;
   margin: 0;
 }
@@ -197,8 +200,9 @@ a {
 
 .header2 p {
   font-weight: normal;
-  font-size: 60px;
+  font-size: 25px;
   margin: 30px 0;
+  padding: 0 10px;
 }
 
 .header2 a {
@@ -228,9 +232,8 @@ a {
   align-items: center;
   border-radius: 15px;
   transition: all 0.3s ease;
-  padding: 70px 10px;
   color: var(--fontDark);
-  width: 40%;
+  width: 35%;
   background-color: white;
   box-shadow: rgb(0 0 0 / 30%) 0px 10px 15px -3px, rgb(0 0 0 / 5%) 0px 4px 6px -2px;
   margin: 1em 0;
@@ -250,9 +253,9 @@ a {
   font-weight: bold;
   transition: all 0.3s ease;
   cursor: pointer;
-  min-width: 300px;
-  font-size: 40px;
-  padding: 34px 45px;
+  min-width: 115px;
+  font-size: 17px;
+  padding: 14px 15px;
   background: var(--baseBlue);
   color: white;
 }
@@ -276,7 +279,7 @@ a {
     position: absolute;
     width: 30%;
     opacity: 0.3;
-    z-index: 10;
+    z-index: -10;
     top: 1px;
   }
   .header2 h1 {
@@ -287,6 +290,7 @@ a {
   }
   .header2 p {
     font-size: 25px;
+    padding: 0;
   }
   .header2 span {
     border-width: 0.5rem;
@@ -317,6 +321,7 @@ a {
     opacity: 1;
     position: relative;
     width: 35%;
+    z-index: 10;
   }
   .header2 p {
     font-size: 20px;
@@ -331,7 +336,7 @@ a {
   justify-content: center;
   flex-direction: column;
   padding: 0;
-  margin: 5% 1%;
+  margin: 5% 0;
   color: var(--fontDark);
 }
 
@@ -345,7 +350,7 @@ a {
 }
 
 .header3 h1 {
-  font-size: 100px;
+  font-size: 45px;
   font-weight: 900;
   margin: 0;
   text-align: center;
@@ -357,8 +362,9 @@ a {
 
 .header3 p {
   font-weight: 400;
-  font-size: 60px;
-  margin: 30px 0;
+  font-size: 20px;
+  margin: 30px 10px;
+  /* padding: 0 10px; */
 }
 
 .header3 a {
@@ -385,9 +391,9 @@ a {
   font-weight: bold;
   transition: all 0.3s ease;
   cursor: pointer;
-  min-width: 300px;
-  font-size: 40px;
-  padding: 34px 45px;
+  min-width: 115px;
+  font-size: 17px;
+  padding: 14px 15px;
   background: var(--baseBlue);
   color: white;
 }
@@ -404,9 +410,6 @@ a {
 }
 
 @media (min-device-width: 480px) {
-  .header3 {
-    margin: 5%;
-  }
   .header3 .container {
     width: 60%;
     text-align: center;
@@ -469,21 +472,21 @@ a {
 }
 
 .content1 h2 {
-  font-size: 75px;
+  font-size: 35px;
   font-weight: 600;
   margin: 0;
 }
 
 .content1 h3 {
   color: var(--baseBlue);
-  font-size: 45px;
+  font-size: 25px;
   font-weight: 500;
   margin: 0;
 }
 
 .content1 p {
   font-weight: normal;
-  font-size: 60px;
+  font-size: 30px;
   margin: 30px 0;
 }
 
@@ -535,15 +538,8 @@ a {
     width: 50%;
     margin-top: 0px;
   }
-  .content1 h2 {
-    font-size: 35px;
-  }
   .content1 h3 {
     color: var(--baseBlue);
-    font-size: 25px;
-  }
-  .content1 p {
-    font-size: 30px;
   }
   .content1 ul {
     width: 100%;
@@ -594,21 +590,22 @@ a {
 }
 
 .content2 h2 {
-  font-size: 75px;
+  font-size: 35px;
   font-weight: 600;
   margin: 0;
 }
 
 .content2 h3 {
-  font-size: 65px;
+  font-size: 30px;
   font-weight: 500;
   margin: 0;
 }
 
 .content2 p {
   font-weight: normal;
-  font-size: 60px;
+  font-size: 30px;
   margin: 30px 0;
+  padding: 0 10px;
 }
 
 .content2 a {
@@ -644,7 +641,7 @@ a {
   background-color: white;
   box-shadow: rgb(0 0 0 / 30%) 0px 10px 15px -3px, rgb(0 0 0 / 5%) 0px 4px 6px -2px;
   margin: 2%;
-  font-size: 60px;
+  font-size: 25px;
 }
 
 .content2 .button-container {
@@ -661,9 +658,10 @@ a {
   border-radius: 5px;
   font-weight: bold;
   transition: all 0.3s ease;
-  min-width: 300px;
-  font-size: 40px;
-  padding: 34px 45px;
+  cursor: pointer;
+  min-width: 115px;
+  font-size: 17px;
+  padding: 14px 15px;
   background: var(--baseBlue);
   color: white;
 }
@@ -683,14 +681,8 @@ a {
     justify-content: center;
     align-items: flex-start;
   }
-  .content2 h2 {
-    font-size: 35px;
-  }
-  .content2 h3 {
-    font-size: 30px;
-  }
   .content2 p {
-    font-size: 30px;
+    padding: 0;
   }
   .content2 ul {
     width: 60%;
@@ -704,7 +696,6 @@ a {
     text-align: left;
     padding: 20px 10px;
     margin: 10px;
-    font-size: 25px;
   }
   .content2 li:hover {
     transform: scale(1.1);
@@ -754,7 +745,7 @@ a {
 }
 
 .content3 h3 {
-  font-size: 65px;
+  font-size: 30px;
   font-weight: 500;
   margin: 0;
 }
@@ -778,25 +769,22 @@ a {
   text-align: center;
   border-radius: 15px;
   transition: all 0.3s ease;
-  padding: 50px 50px;
+  padding: 20px 20px;
   color: var(--fontDark);
   background-color: white;
   box-shadow: rgb(0 0 0 / 30%) 0px 10px 15px -3px, rgb(0 0 0 / 5%) 0px 4px 6px -2px;
-  margin: 2%;
-  font-size: 60px;
+  margin: 1%;
+  font-size: 20px;
 }
 
 @media (min-device-width: 480px) {
   .content3 {
-    margin: 0 5%;
+    margin: 1% 5%;
   }
   .content3 .container {
     width: 40%;
     justify-content: center;
     align-items: flex-start;
-  }
-  .content3 h3 {
-    font-size: 30px;
   }
   .content3 li {
     min-width: 110px;
@@ -815,7 +803,7 @@ a {
 @media (min-device-width: 1120px) {
   .content3 {
     flex-direction: row;
-    margin: 0 10%;
+    margin: 1% 10%;
   }
   .content3 ul {
 
@@ -826,7 +814,7 @@ a {
 .footer1 {
   background-color: var(--backLight);
   color: var(--fontDark);
-  margin-top: 15px;
+  padding-top: 15px;
 }
 
 .footer1 .container {
@@ -853,7 +841,7 @@ a {
 }
 
 .footer1 h1 {
-  font-size: 100px;
+  font-size: 20px;
   font-weight: 900;
   margin: 0;
 }
@@ -863,7 +851,7 @@ a {
 }
 
 .footer1 h4 {
-  font-size: 55px;
+  font-size: 20px;
   font-weight: 500;
   margin: 0;
 }
@@ -874,7 +862,7 @@ a {
 
 .footer1 p {
   font-weight: normal;
-  font-size: 60px;
+  font-size: 18px;
   margin: 0;
   margin-top: 30px;
   margin-bottom: 15px;
@@ -903,14 +891,14 @@ a {
 }
 
 .footer1 li {
-  font-size: 50px;
+  font-size: 20px;
   font-weight: 200;
   padding: 3px;
   padding-left: 0;
 }
 
 .footer1 .sign {
-  font-size: 25px;
+  font-size: 15px;
   position: absolute;
   margin-left: auto;
   margin-right: auto;
@@ -920,7 +908,7 @@ a {
   bottom: 5px;
 }
 
-@media (min-device-width: 480px) {
+@media (min-device-width: 820px) {
   .footer1 .container {
     margin: 0 5%;
     padding: 0;
@@ -938,17 +926,16 @@ a {
     margin-top: 0px;
   }
   .footer1 p {
-    font-size: 20px;
+    font-size: 25px;
   }
   .footer1 h4 {
-    font-size: 35px;
     text-align: left;
   }
   .footer1 ul {
     text-align: left;
   }
   .footer1 li {
-    font-size: 30px;
+    font-size: 25px;
   }
   .footer1 .sign {
     font-size: 12px;
@@ -960,12 +947,6 @@ a {
     padding-bottom: 3%;
     flex-wrap: nowrap;
   }
-  .footer1 h4 {
-    font-size: 30px;
-  }
-  .footer1 li {
-    font-size: 25px;
-  }
   .footer1 .sign {
     font-size: 15px;
   }
@@ -974,7 +955,7 @@ a {
 .footer2 {
   background-color: var(--backDark);
   color: white;
-  margin-top: 15px;
+  padding-top: 15px;
 }
 
 .footer2 .container {
@@ -1005,7 +986,7 @@ a {
 }
 
 .footer2 h4 {
-  font-size: 55px;
+  font-size: 20px;
   font-weight: 500;
   margin: 0;
 }
@@ -1016,7 +997,7 @@ a {
 
 .footer2 p {
   font-weight: normal;
-  font-size: 60px;
+  font-size: 18px;
   margin: 0;
   margin-top: 30px;
   margin-bottom: 15px;
@@ -1045,14 +1026,14 @@ a {
 }
 
 .footer2 li {
-  font-size: 50px;
+  font-size: 20px;
   font-weight: 200;
   padding: 3px;
   padding-left: 0;
 }
 
 .footer2 .sign {
-  font-size: 25px;
+  font-size: 15px;
   position: absolute;
   margin-left: auto;
   margin-right: auto;
@@ -1062,11 +1043,9 @@ a {
   bottom: 5px;
 }
 
-@media (min-device-width: 480px) {
+@media (min-device-width: 820px) {
   .footer2 .container {
     margin: 0 5%;
-    flex-direction: row;
-    flex-wrap: wrap;
     padding: 0;
     padding-bottom: 5%;
   }
@@ -1082,17 +1061,16 @@ a {
     margin-top: 0px;
   }
   .footer2 p {
-    font-size: 20px;
+    font-size: 25px;
   }
   .footer2 h4 {
-    font-size: 35px;
     text-align: left;
   }
   .footer2 ul {
     text-align: left;
   }
   .footer2 li {
-    font-size: 30px;
+    font-size: 25px;
   }
   .footer2 .sign {
     font-size: 12px;
@@ -1103,12 +1081,6 @@ a {
     margin: 0 10%;
     padding-bottom: 3%;
     flex-wrap: nowrap;
-  }
-  .footer2 h4 {
-    font-size: 30px;
-  }
-  .footer2 li {
-    font-size: 25px;
   }
   .footer2 .sign {
     font-size: 15px;
